--- a/index.html
+++ b/index.html
@@ -1,34 +1,37 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title> My Blog </title>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow" rel="stylesheet">
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Company Name</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+
+<head>
+  <title> My Blog </title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Company Name</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">services <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">contact us</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Pricing</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">About Us</a>
-      </li>
-    </ul>
-  </div>
-</nav>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">services <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">contact us</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Pricing</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">About Us</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
 
   <header>
     <h1> Company Name!!!!</h1>
@@ -38,8 +41,142 @@
 
 
   </header>
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    </body>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+  <section class="services conatiner">
+    <h1>vsvds </h1>
+    <p> vsdvsdvsvsv</p>
+    <hr>
+    <div class="row">
+      <div class="col-md-6">
+        <i class="fas fa-desktop"></i>
+        <span><strong>Web Design</strong></span>
+        <p> We offer web design services to bussinesses who are interested in creating a digital presence.</p>
+      </div>
+      <div class="col-md-6">
+        <i class="fas fa-mobile-alt"></i>
+        <span><strong>Mobile applications</strong></span>
+        <p> We create mobile applications for companies who are interested in expanding their product ro reach a larger audience.</p>
+      </div>
+       <div class="col-md-6">
+        <i class="fas fa-desktop"></i>
+        <span><strong>Web Design</strong></span>
+        <p> We offer web design services to bussinesses who are interested in creating a digital presence.</p>
+      </div>
+       <div class="col-md-6">
+        <i class="fas fa-desktop"></i>
+        <span><strong>Web Design</strong></span>
+        <p> We offer web design services to bussinesses who are interested in creating a digital presence.</p>
+      </div>
+    </div>
+
+  </section>
+
+  <section class="team container">
+
+    <div class="row">
+
+      <!--Alex-->
+      <div class="col-md-3">
+        <img src="alex.png"></img>
+      </div>
+      <!--Pedro-->
+      <div class="col-md-3">
+        <img src="pedro.png"></img>
+      </div>
+      <!--Pablo-->
+      <div class="col-md-3">
+        <img src="pablo.png"></img>
+      </div>
+      <!--Jesus-->
+      <div class="col-md-3">
+        <img src="jesus.png"></img>
+      </div>
+    </div>
+
+    <div class="row">
+      <!--Alex-->
+      <div class="col-md-3">
+        <h3>Alex</h3>
+        <span><strong>IDK</strong></span>
+        <p> vkshbivhbkjsbdv</p>
+      </div>
+      <!--pedro-->
+      <div class="col-md-3">
+        <h3>Pedro</h3>
+        <span><strong>IDK</strong></span>
+        <p> vkshbivhbkjsbdv</p>
+      </div>
+      <!--Pablo-->
+      <div class="col-md-3">
+        <h3>Pablo</h3>
+        <span><strong>IDK</strong></span>
+        <p> vkshbivhbkjsbdv</p>
+      </div>
+      <!--Jesus-->
+      <div class="col-md-3">
+        <h3>Jesus</h3>
+        <span><strong>IDK</strong></span>
+        <p> vkshbivhbkjsbdv</p>
+      </div>
+
+    </div>
+
+  </section>
+  
+  <section class="contacts container">
+    <div class="row">
+      <!--inputs-->
+      <div class="col-md-6">
+          <div class="input-group input-group-lg">
+        <div class="input-group-prepend">
+          <i class="fas fa-user"></i>
+        </div>
+        <input type="text" class="form-control" aria-label="Large" aria-describedby="inputGroup-sizing-sm">
+      </div>
+            <div class="input-group input-group-lg">
+        <div class="input-group-prepend">
+          <i class="fas fa-envelope"></i>
+        </div>
+        <input type="text" class="form-control" aria-label="Large" aria-describedby="inputGroup-sizing-sm">
+      </div><div class="input-group input-group-lg">
+        <div class="input-group-prepend">
+          <i class="fas fa-phone"></i>
+        </div>
+        <input type="text" class="form-control" aria-label="Large" aria-describedby="inputGroup-sizing-sm">
+    </div>
+      </div>
+      <!--textarea-->
+      <div class="col-md-6">
+        <div class="input-group">
+  <div class="input-group-prepend">
+    <span class="input-group-text">With textarea</span>
+  </div>
+  <textarea class="form-control" aria-label="With textarea"></textarea>
+</div>
+<button type="button" class="btn btn-danger">Submit Your Message</button>
+      </div>
+    </div>
+  </section>
+
+  <footer class="container"> 
+    <div class="row">
+      <div class="col-md-4">
+        <h1>Contact Us</h1>
+        <ul class="list1"></ul>
+          <li>Address</li>
+          <li>Email</li>
+          <li>Pphone number</li>
+          <li>Website</li>
+      </div>
+      <div class="col-md-4">
+      </div>
+      <div class="col-md-4">
+      </div>
+    </div>
+  </footer>
+</body>
+
 </html>
